# callisto

./: .gitignore  LICENSE  callisto.code-workspace  conan_update_x64.bat  conan_update_x64.ps1  conan_update_x64.sh  conanfile.py  conanfile.txt
callisto.framework/: CMakeLists.txt
callisto.framework/include/callisto/: framework.hpp
callisto.framework/include/callisto/framework/: containers.hpp  memory.hpp  string.hpp  types.hpp  utility.hpp
callisto.framework/include/callisto/framework/configuration/: object_enum.hpp
callisto.framework/include/callisto/framework/containers/: enum_map.hpp  ring_buffer.hpp
callisto.framework/include/callisto/framework/exception/: common_tags.hpp  exception.hpp  panic_exception.hpp
callisto.framework/include/callisto/framework/memory/: aligned.hpp
callisto.framework/include/callisto/framework/native/: numeric_type.hpp  processor_info.hpp
callisto.framework/include/callisto/framework/test/: gtest.hpp
callisto.framework/include/callisto/framework/types/: default.hpp  type_traits.hpp
callisto.framework/include/callisto/framework/types/type_traits/: senior_conversion.hpp
callisto.framework/include/callisto/framework/utility/: randomizer.hpp  step_slice.hpp  stopwatch.hpp  string_auxiliary.hpp  value_clamper.hpp
callisto.framework/src/callisto/framework/memory/: aligned.cpp
callisto.framework/src/callisto/framework/native/: processor_info.cpp
callisto.framework/src/callisto/framework/types/: ios_types.cpp
callisto.graphics/: CMakeLists.txt
callisto.graphics/include/callisto/graphics/: freetype.hpp
callisto.graphics/include/callisto/graphics/data/: input.hpp
callisto.graphics/include/callisto/graphics/data/input/: key_type.hpp
callisto.graphics/include/callisto/graphics/freetype/: bindings.hpp  exception.hpp
callisto.graphics/include/callisto/graphics/freetype/bindings/: bitmap_glyph.hpp  stroker.hpp
callisto.graphics/include/callisto/graphics/freetype/enum/: pixel_mode.hpp
callisto.graphics/include/callisto/graphics/input/: data.hpp
callisto.graphics/include/callisto/graphics/input/data/: key_event.hpp  mouse_button_event.hpp
callisto.graphics/include/callisto/graphics/typing/: freetype.hpp
callisto.graphics/include/callisto/graphics/typing/data/: font_symbol_data.hpp  font_symbol_metrics.hpp  typing_garniture.hpp
callisto.graphics/include/callisto/graphics/visual/: a_window_processor.hpp  i_monitor_context.hpp  i_window_context.hpp
callisto.graphics/include/callisto/graphics/visual/data/: window_mode.hpp  window_options.hpp  window_state.hpp
callisto.graphics/include/callisto/graphics/visual/opengl/: exception.hpp  gl_window_context.hpp
callisto.graphics/src/callisto/graphics/freetype/bindings/: bitmap_auxiliary.cpp  face.cpp  library.cpp
callisto.graphics/src/callisto/graphics/typing/data/: typing_garniture.cpp
callisto.graphics/src/callisto/graphics/visual/: a_window_processor.cpp  graphics_context.cpp
callisto.graphics/src/callisto/graphics/visual/openg/: gl_window_context.cpp
callisto.graphics/src/callisto/graphics/visual/opengl/: gl_main_context.cpp  gl_monitor_context.cpp  gl_window_context.cpp
callisto.library/: CMakeLists.txt
callisto.library/callisto.framework/include/callisto/framework/: app.hpp  concepts.hpp  containers.hpp  exception.hpp  native.hpp  templates.hpp  types.hpp  utility.hpp
callisto.library/callisto.framework/include/callisto/framework/app/: application_environment.hpp
callisto.library/callisto.framework/include/callisto/framework/concepts/: core.hpp
callisto.library/callisto.framework/include/callisto/framework/containers/: ring_buffer.hpp
callisto.library/callisto.framework/include/callisto/framework/exception/: common_exceptions.hpp  common_tags.hpp  exception.hpp  throw.hpp
callisto.library/callisto.framework/include/callisto/framework/ios/: fstream_aux.hpp  sequence_printer.hpp  table_printer.hpp
callisto.library/callisto.framework/include/callisto/framework/native/: main_wchar_arguments.hpp  numeric_type.hpp  platform_detect.h  processor_info.hpp
callisto.library/callisto.framework/include/callisto/framework/string/: build_string.hpp
callisto.library/callisto.framework/include/callisto/framework/templates/: mutable_array.hpp
callisto.library/callisto.framework/include/callisto/framework/types/: assert_traits.hpp  enum.hpp  ios_types.hpp  type_traits.hpp
callisto.library/callisto.framework/include/callisto/framework/utility/: delta_timer.hpp  slice.hpp
callisto.library/callisto.graphics/include/callisto/graphics/: visual.hpp
callisto.library/callisto.math/: CMakeLists.txt
callisto.library/callisto.math/include/callisto/math/: constants.hpp  conversion.hpp  error.hpp  functions.hpp  opearations.hpp  operations.hpp  primitives.hpp
callisto.library/callisto.math/src/placeholder/: callisto_math_placeholder.cpp
callisto.library/callisto.opencv/include/callisto/: opencv.hpp
callisto.library/callisto.opencv/include/callisto/opencv/: auxiliary.hpp  conversion.hpp  data.hpp  draw.hpp  processing.hpp  rw.hpp  validation.hpp  visual.hpp
callisto.library/callisto.opencv/src/callisto/opencv/: auxiliary.cpp  conversion.cpp  processing.cpp  rw.cpp  visual.cpp
callisto.math/: CMakeLists.txt
callisto.math/include/callisto/math/: functions.hpp  primitives.hpp  sequence_metrics.hpp  system_coord_transformer.hpp  utility.hpp
callisto.math/include/callisto/math/operations/: line2op.hpp  point2op.hpp  poly2op.hpp  vector2op.hpp
callisto.math/include/callisto/math/placeholder/: callisto_math_placeholder.hpp
callisto.math/include/callisto/math/primitives/: alg_tuple2.hpp  line2.hpp  rectangle.hpp
callisto.opencv/: CMakeLists.txt
callisto.opencv/include/callisto/opencv/: auxiliary.hpp  draw.hpp  exception.hpp  mat_holder.hpp  rw.hpp  validation.hpp
callisto.opencv/include/callisto/opencv/data/: image_type.hpp
callisto.opencv/src/callisto/opencv/: auxiliary.cpp  processing.cpp
manual_examples/freetype.render.example/: CMakeLists.txt
manual_examples/freetype.render.example/src/: example_standard.cpp  examples.hpp  main.cpp
(+121 files in other folders)
